# ExternalCMakeProject

./: ExternalCMakeProject.uplugin  README.md
CMake/: CMakeLists.txt  ExportToUnrealEngine.cmake
Source/ExternalCMakeProject/: ExternalCMakeProject.Build.cs
Source/ExternalCMakeProject/Private/: ExternalCMakeProject.cpp
Source/ExternalCMakeProject/Public/: ExternalCMakeProject.h
